--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,7 +87,7 @@ jobs:
         run: |
           brew update
           brew install --HEAD --build-from-source dylibbundler portaudio
-          brew install airspy boost gnuradio hackrf libbladerf librtlsdr libserialport pybind11 uhd libsnfile
+          brew install airspy boost gnuradio hackrf libbladerf librtlsdr libserialport pybind11 uhd libsndfile
           brew tap pothosware/homebrew-pothos
           brew install soapysdr soapyremote
 
