Implement new squelch-triggered audio recorder
Move wav_sink into receiver_base_cf
Move file name generation to receiver_base_cf
Switch to pwr_squelch
Pull in wavfile_sink and fix #1075
Implement new squelch-triggered audio recorder while keeping in mind that
https://github.com/gqrx-sdr/gqrx/issues/946 would be next.
Add tag processing to wavfile_sink_gqrx.
Implement event-driven GUI updates.
Add GUI options
Make it possible to switch betweensimple_squelch and pwr_squelch implementations
to improve performace on weak systems
Update build dependencies (add libsndfile)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,8 @@ jobs:
             soapysdr-module-remote \
             libuhd-dev \
             liborc-0.4-dev \
-            libhidapi-dev
+            libhidapi-dev \
+            libsndfile-dev
 
           cd /tmp
           git clone https://gitea.osmocom.org/sdr/rtl-sdr.git
@@ -171,7 +172,7 @@ jobs:
         run: |
           brew update
           brew install --HEAD librtlsdr
-          brew install airspy airspyhf boost dylibbundler gnuradio hackrf libbladerf libserialport portaudio pybind11 six uhd qt@6 || true
+          brew install airspy airspyhf boost dylibbundler gnuradio hackrf libbladerf libserialport portaudio pybind11 six uhd libsndfile qt@6 || true
           brew tap pothosware/homebrew-pothos
           brew install soapyremote
 
