rnnoise_nb: Implement NB3 rnnoise based noise blanker

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,6 +145,7 @@ endif()
 include(FindPkgConfig)
 find_package(Gnuradio-osmosdr REQUIRED)
 find_package(SNDFILE REQUIRED)
+find_package(RNNOISE)
 
 set(GR_REQUIRED_COMPONENTS RUNTIME ANALOG AUDIO BLOCKS DIGITAL FILTER FFT PMT)
 find_package(Gnuradio REQUIRED COMPONENTS analog audio blocks digital filter fft network)
