--- a/src/qtgui/CMakeLists.txt
+++ b/src/qtgui/CMakeLists.txt
@@ -54,6 +54,8 @@ add_source_files(SRCS_LIST
 	plotter.h
 	qtcolorpicker.cpp
 	qtcolorpicker.h
+	dockrtty.cpp
+	dockrtty.h
 )
 
 #######################################################################################################################
@@ -75,4 +77,5 @@ add_source_files(UI_SRCS_LIST
 	ioconfig.ui
 	iq_tool.ui
 	nb_options.ui
+	dockrtty.ui
 )
