iq_formats: split converter implementations to a separate file

--- a/src/dsp/CMakeLists.txt
+++ b/src/dsp/CMakeLists.txt
@@ -48,6 +48,7 @@ add_source_files(SRCS_LIST
 	stereo_demod.cpp
 	stereo_demod.h
 	format_converter.h
+	format_converter.cpp
 	rx_squelch.cpp
 	rx_squelch.h
 	rx_rnnoise.cpp
