Revert "Drop support for GNU Radio 3.7"
This reverts commit 5052dbc060076a5b3883ab823ec3fd2e327a42dd.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ jobs:
     strategy:
       matrix:
         image:
+          - "ubuntu:18.04"
           - "ubuntu:20.04"
           - "ubuntu:22.04"
           - "ubuntu:24.04"
@@ -37,13 +38,13 @@ jobs:
             appstream \
             desktop-file-utils
       - name: Install Qt5
-        if: matrix.image == 'ubuntu:20.04'
+        if: matrix.image == 'ubuntu:20.04' || matrix.image == 'ubuntu:18.04'
         run: |
           apt-get install -y \
             qt5-default \
             libqt5svg5-dev
       - name: Install Qt6
-        if: matrix.image != 'ubuntu:20.04'
+        if: matrix.image != 'ubuntu:20.04' && matrix.image != 'ubuntu:18.04'
         run: |
           apt-get install -y \
             qt6-base-dev \
