--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,6 +159,10 @@ math(EXPR GNURADIO_BCD_VERSION
 )
 add_definitions(-DGNURADIO_VERSION=${GNURADIO_BCD_VERSION})
 
+if(Gnuradio_VERSION VERSION_LESS "3.8")
+    find_package(Boost COMPONENTS system REQUIRED)
+endif()
+
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux|FreeBSD")
     if(NOT LINUX_AUDIO_BACKEND)
         set(LINUX_AUDIO_BACKEND Pulseaudio CACHE STRING "Choose the audio backend, options are: Pulseaudio, Portaudio, Gr-audio" FORCE)
@@ -174,7 +178,11 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linux|FreeBSD")
         unset(PORTAUDIO_LIBRARIES CACHE)
     elseif(${LINUX_AUDIO_BACKEND} MATCHES "Portaudio")
         message(STATUS "Portaudio backend enabled")
-        find_package(PORTAUDIO REQUIRED)
+        if(Gnuradio_VERSION VERSION_LESS "3.8")
+            find_package(Portaudio REQUIRED)
+        else()
+            find_package(PORTAUDIO REQUIRED)
+        endif()
         add_definitions(-DWITH_PORTAUDIO)
         unset(PULSEAUDIO_FOUND CACHE)
         unset(PULSEAUDIO_INCLUDE_DIR CACHE)
@@ -206,7 +214,11 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
     if(${OSX_AUDIO_BACKEND} MATCHES "Portaudio")
         message(STATUS "Portaudio backend enabled")
-        find_package(PORTAUDIO REQUIRED)
+        if(Gnuradio_VERSION VERSION_LESS "3.8")
+            find_package(Portaudio REQUIRED)
+        else()
+            find_package(PORTAUDIO REQUIRED)
+        endif()
         add_definitions(-DWITH_PORTAUDIO)
         unset(PULSEAUDIO_FOUND CACHE)
         unset(PULSEAUDIO_INCLUDE_DIR CACHE)
@@ -261,6 +273,17 @@ link_directories(
     ${GNURADIO_RUNTIME_LIBRARY_DIRS}
     ${ICU4C_LIBRARY_DIRS}
 )
+
+if(Gnuradio_VERSION VERSION_LESS "3.8")
+    include_directories(
+        ${Boost_INCLUDE_DIRS}
+        ${GNURADIO_RUNTIME_INCLUDE_DIRS}
+    )
+
+    link_directories(
+        ${Boost_LIBRARY_DIRS}
+    )
+endif()
 
 # Install desktop
 install(FILES dk.gqrx.gqrx.desktop DESTINATION share/applications)
