--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -309,7 +309,7 @@ jobs:
     - name: Clone and build GNU Radio
       working-directory: ${{ runner.temp }}
       run: |
-        git clone --branch v3.10.9.2 --depth 1 https://github.com/gnuradio/gnuradio.git
+        git clone --branch tag_dropping_fix+3.10 --depth 1 https://github.com/vladisslav2011/gnuradio.git
         cd gnuradio
         cmake -S . -B build \
           -DCMAKE_INSTALL_PREFIX=${RUNNER_TEMP}/msys64/mingw64 \
