--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,78 +13,10 @@ jobs:
     steps:
       - name: Install base dependencies
         run: |
-          apt-get update -qq
-          apt-get install -y --no-install-recommends software-properties-common
-          add-apt-repository -y ppa:gnuradio/gnuradio-releases
-          add-apt-repository -y ppa:git-core/ppa
-          apt-get install -y --no-install-recommends \
-            git \
-            build-essential \
-            autoconf \
-            automake \
-            cmake \
-            libtool \
-            wget \
-            qt5-default \
-            qt5-gtk-platformtheme \
-            qttranslations5-l10n \
-            libqt5svg5-dev \
-            libboost-dev \
-            libpulse-dev \
-            portaudio19-dev \
-            liblog4cpp5-dev \
-            gnuradio-dev \
-            libairspy-dev \
-            libairspyhf-dev \
-            libfreesrp-dev \
-            libhackrf-dev \
-            libusb-1.0-0-dev \
-            libsoapysdr-dev \
-            soapysdr-module-remote \
-            libuhd-dev \
-            liborc-0.4-dev \
-            libhidapi-dev \
-            libsndfile-dev
-
-          cd /tmp
-          git clone https://gitea.osmocom.org/sdr/rtl-sdr.git
-          cd rtl-sdr
-          git checkout v2.0.1
-          mkdir build
-          cd build
-          cmake -DCMAKE_INSTALL_PREFIX=/usr -DDETACH_KERNEL_DRIVER=ON ..
-          make -j4
-          make install
-          ldconfig
-
-          cd /tmp
-          git clone https://github.com/Nuand/bladeRF.git
-          cd bladeRF
-          mkdir build
-          cd build
-          cmake -DCMAKE_INSTALL_PREFIX=/usr ..
-          make -j4
-          make install
-          ldconfig
-
-          cd /tmp
-          git clone https://github.com/dl1ksv/gr-fcdproplus.git
-          cd gr-fcdproplus
-          mkdir build
-          cd build
-          cmake -DCMAKE_INSTALL_PREFIX=/usr ..
-          make -j4
-          make install
-          ldconfig
-
-          cd /tmp
-          git clone https://gitea.osmocom.org/sdr/libosmo-dsp.git
-          cd libosmo-dsp
-          autoreconf -i
-          ./configure --prefix=/usr
-          make -j4
-          make install
-          ldconfig
+          sudo apt-get update -qq
+          sudo apt-get install -y --no-install-recommends \
+            libopengl0 \
+            libegl1
 
       - name: Install conda dependencies
         id: setup-micromamba
