--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
     name: MacOS CI
     strategy:
       matrix:
-        os: [macos-12, macos-13]
+        os: [macos-13, macos-14]
         backend: [Portaudio, Gr-audio]
     runs-on: ${{ matrix.os }}
     steps:
@@ -88,7 +88,7 @@ jobs:
           cd build
           cmake -DCMAKE_CXX_FLAGS=-Wno-register ..
           LIBRARY_PATH=/usr/local/opt/icu4c/lib make -j4
-          make install
+          sudo make install
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Configure
