--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,7 @@ jobs:
           cd build
           cmake -DCMAKE_CXX_FLAGS=-Wno-register ..
           LIBRARY_PATH=/usr/local/opt/icu4c/lib make -j4
-          make install
+          sudo make install
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Configure
