--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,27 @@ jobs:
             libqt6svg6-dev \
             libqt6svgwidgets6 \
             libgl-dev
+      - name: Install GLIBC
+        if: matrix.image == 'ubuntu:18.04'
+        run: |
+          cd /tmp
+          apt install -y gawk bison wget
+          wget -c https://ftp.gnu.org/gnu/glibc/glibc-2.28.tar.gz
+          tar -zxf glibc-2.28.tar.gz
+          cd glibc-2.28
+          mkdir glibc-build
+          cd glibc-build
+          echo "bindir = /usr/bin" > configparms
+          echo "sbindir = /sbin" >> configparms
+          echo "libdir = /lib/x86_64-linux-gnu" >> configparms
+          echo "slibdir = /lib/x86_64-linux-gnu" >> configparms
+          echo "sysconfdir = /etc" >> configparms
+          ../configure --prefix=/opt/glibc-2.28 >/dev/null
+          make -j4 >/dev/null
+          make install DESTDIR=$(pwd)/../install
+          cp -var ../install/* /
+          /lib/x86_64-linux-gnu/ld-2.28.so /bin/ln -sf /lib/x86_64-linux-gnu/ld-2.28.so /lib64/ld-linux-x86-64.so.2
+          ldconfig
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Configure
